<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014, Hiroshi Miura <miurahr@linux.com>
  Copyright 2014, Bluetooth GNSS for OSM Project


  ** ORIGINAL COPYRIGHT NOTIFICATION **
  Copyright (C) 2010, 2011, 2012, 2013 Herbert von Broeuschmeul
  Copyright (C) 2010, 2011, 2012, 2013 BluetoothGPS4Droid Project

  This file is part of BluetoothGPS4Droid.

  BluetoothGPS4Droid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  BluetoothGPS4Droid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with BluetoothGPS4Droid. If not, see : http://www.gnu.org/licenses/.
-->
<resources>
    <string name="app_name">BlueGnss</string>

    <string name="title_main">Main</string>
    <string name="title_status">Status</string>

    <string name="main_bluetooth_device_title">Current device:</string>
    <string name="main_start">Start</string>
    <string name="main_stop">Stop</string>
    <string name="main_logging_start">Start</string>
    <string name="main_logging_stop">Stop</string>
    <string name="main_date_time_title">Date/Time</string>
    <string name="main_lon_title">Longitude</string>
    <string name="main_lat_title">Latitude</string>
    <string name="main_speed_title">Speed</string>
    <string name="main_hdop_title">HDOP</string>
    <string name="main_num_satellites_title">Sat Tracked/in View</string>
    <string name="main_used_satellites_title">Sat used</string>

    <string name="main_bluetooth_device_name">N.A.</string>
    <string name="main_date_time">N.A.</string>
    <string name="main_lon">N.A.</string>
    <string name="main_lat">N.A.</string>
    <string name="main_speed">N.A.</string>
    <string name="main_hdop">N.A.</string>
    <string name="main_num_satellites">N.A.</string>
    <string name="main_used_satellites">N.A.</string>

    <string name="pref_start_gps_title">Start/Stop GPS/GNSS</string>
    <string name="pref_start_gps_summary_off">Bluetooth GPS/GNSS is off</string>
    <string name="pref_start_gps_summary_on">Bluetooth GPS/GNSS is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Bluetooth GPS/GNSS receiver will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>
    <string name="pref_replace_std_gps_summary_on">Bluetooth GPS/GNSS receiver will replace internal GPS</string>
    <string name="pref_replace_std_gps_summary_off">Bluetooth GPS/GNSS receiver will use a new location provider</string>
    <string name="pref_force_enable_provider_title">Auto-enable location provider</string>
    <string name="pref_force_enable_provider_summary_on">Auto-enable the location provider, even if it has been disabled</string>
    <string name="pref_force_enable_provider_summary_off">Auto-enable the location provider only if it doesn\'t exist yet</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Bluetooth GPS/GNSS name: %s</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_recording_title">Enable/Disable NMEA log</string>
    <string name="pref_recording_summary_off">Track recording is off</string>
    <string name="pref_recording_summary_on">Track recording is on</string>
    <string name="pref_recording_params_title">Recording parameters</string>
    <string name="pref_trackfile_prefix_title">Trackfiles prefix</string>
    <string name="pref_trackfile_prefix_summary">Select the prefix for the track files</string>
    <string name="pref_trackfile_directory_title">Trackfiles directory</string>
    <string name="pref_trackfile_directory_summary">Select the directory for the track files</string>
    <string name="pref_bluetooth_device_title">Choose Bluetooth GPS/GNSS receiver</string>
    <string name="pref_bluetooth_device_summary">"Current device: %s"</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>

    <string name="pref_sirf_gps_title">SiRF GPS</string>
    <string name="pref_sirf_gps_summary_off">"Don't use SiRF Options"</string>
    <string name="pref_sirf_gps_summary_on">"Use SiRF Options"</string>
    <string name="pref_sirf_nmea_category_title">Choice of NMEA sentences</string>
    <string name="pref_sirf_gps_category_title">GPS operation</string>
    <string name="pref_enable_gga_title">Enable NMEA GGA</string>
    <string name="pref_enable_gga_summary_off">NMEA GGA sentences are off</string>
    <string name="pref_enable_gga_summary_on">NMEA GGA sentences are on</string>
    <string name="pref_enable_rmc_title">Enable NMEA RMC</string>
    <string name="pref_enable_rmc_summary_off">NMEA RMC sentences are off</string>
    <string name="pref_enable_rmc_summary_on">NMEA RMC sentences are on</string>
    <string name="pref_enable_gll_title">Enable NMEA GLL</string>
    <string name="pref_enable_gll_summary_off">NMEA GLL sentences are off</string>
    <string name="pref_enable_gll_summary_on">NMEA GLL sentences are on</string>
    <string name="pref_enable_vtg_title">Enable NMEA VTG</string>
    <string name="pref_enable_vtg_summary_off">NMEA VTG sentences are off</string>
    <string name="pref_enable_vtg_summary_on">NMEA VTG sentences are on</string>
    <string name="pref_enable_gsa_title">Enable NMEA GSA</string>
    <string name="pref_enable_gsa_summary_off">NMEA GSA sentences are off</string>
    <string name="pref_enable_gsa_summary_on">NMEA GSA sentences are on</string>
    <string name="pref_enable_gsv_title">Enable NMEA GSV</string>
    <string name="pref_enable_gsv_summary_off">NMEA GSV sentences are off</string>
    <string name="pref_enable_gsv_summary_on">NMEA GSV sentences are on</string>
    <string name="pref_enable_zda_title">Enable NMEA ZDA</string>
    <string name="pref_enable_zda_summary_off">NMEA ZDA sentences are off</string>
    <string name="pref_enable_zda_summary_on">NMEA ZDA sentences are on</string>
    <string name="pref_enable_sbas_title">SBAS (WAAS/EGNOS)</string>
    <string name="pref_enable_sbas_summary_off">SBAS is off</string>
    <string name="pref_enable_sbas_summary_on">SBAS is on</string>
    <string name="pref_enable_nmea_title">NMEA/Binary mode</string>
    <string name="pref_enable_nmea_summary_off">Binary mode is on</string>
    <string name="pref_enable_nmea_summary_on">NMEA mode is on</string>
    <string name="pref_enable_static_navigation_title">Static Navigation</string>
    <string name="pref_enable_static_navigation_summary_off">Static Navigation disabled</string>
    <string name="pref_enable_static_navigation_summary_on">Static Navigation enabled</string>

    <string name="msg_gps_provider_started">Bluetooth GPS/GNSS… started</string>
    <string name="msg_gps_provider_stopped">Bluetooth GPS/GNSS… stopped</string>
    <string name="msg_gps_provider_already_started">Bluetooth GPS/GNSS… is already on</string>
    <string name="msg_gps_provider_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_two_many_connection_problems">Too many connection problems</string>
    <string name="msg_gps_provider_disabled">GPS/GNSS is disabled</string>
    <string name="msg_bluetooth_unsupported">Bluetooth is not supported</string>
    <string name="msg_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="msg_mock_location_disabled">Mock locations disabled</string>
    <string name="msg_bluetooth_gps_unavaible">Cannot connect to bluetooth GPS/GNSS</string>
    <string name="msg_nmea_recording_started">GPS/GNSS NMEA recording… started</string>
    <string name="msg_nmea_recording_stopped">GPS/GNSS NMEA recording… stopped</string>
    <string name="msg_nmea_recording_already_started">GPS/GNSS track recording… is already on</string>
    <string name="foreground_service_started_notification_title">BlueGnss</string>
    <string name="foreground_gps_provider_started_notification">BlueGnss service started</string>
    <string name="foreground_nmea_recording_started_notification">BlueGnss NMEA recording service started</string>
    <string name="connection_problem_notification_title">BlueGnss: connection problem</string>
    <plurals name="connection_problem_notification">
      <item quantity="one">Will retry one more time before closing</item>
      <item quantity="other">Will retry %d more times before closing</item>
    </plurals>
    <string name="service_closed_because_connection_problem_notification_title">BlueGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>

    <string name="about_title">About</string>
    <string name="about_version">BluetoothGNSS4OSM version</string>
    <string name="about_copyright_1">Copyright 2014, Hiroshi Miura</string>
    <string name="about_copyright_2">Copyright 2014, Bluetooth GNSS for OSM Project</string>
    <string name="about_app_desc">Bluetooth GNSS for OSM is an application
      for using an external bluetooth GPS/GNSS on Android devices for OSM Mappers.
    </string>
    <string name="about_license">It is free software
      distributed under the terms of the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>GNU General Public License v3</b></a>.
    </string>
    <string name="about_sources">The source code is available from Git repository on the project website:
      https://github.com/miurahr/bluegnss4osm
    </string>
    <string name="about_original">It was forked from BluetoothGPS4Droid project.
      Acknowleged to original authors.</string>
    <string name="about_copyright_3">Copyright 2010-2013, Herbert von Broeuschmeul</string>
    <string name="about_copyright_4">Copyright 2010-2013, BluetoothGPS4Droid Project</string>
</resources>
