<?xml version="1.0" encoding="utf-8"?>
<!-- 
	Copyright (C) 2014 Hiroshi Miura
	Copyright (C) 2014 BluetoothGPS4Droid Project
	  
	This file is part of BluetoothGPS4Droid.
	
	BluetoothGPS4Droid is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	BluetoothGPS4Droid is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with BluetoothGPS4Droid. If not, see : http://www.gnu.org/licenses/.
-->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:orientation="vertical"
	tools:context="org.da_cha.android.bluegnss.MainFragment"
  android:title="@string/app_name">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal" >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/main_bluetooth_device_title" />
    <TextView
      android:id="@+id/main_bluetooth_device_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="6dp"
      android:textSize="@dimen/main_device_font_size"
      android:text="@string/main_bluetooth_device_name" />
    <Button
      android:id="@+id/btn_start_stop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_start" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal" >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/main_nmealog_font_size"
      android:text="NMEA logging" />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="" />
    <Button
      android:id="@+id/btn_start_logging"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_logging_start" />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:layout_marginTop="16dp"
      android:background="#ff808080" />
  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >

    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:text="@string/main_date_time_title" />
      <TextView
        android:id="@+id/main_date_time"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_gravity="center"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_date_time" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:id="@+id/main_lon_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_lon_title" />
      <TextView
        android:id="@+id/main_lon"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_lon" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:id="@+id/main_lat_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_lat_title" />
      <TextView
        android:id="@+id/main_lat"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:layout_gravity="center"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_lat" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_speed_title" />
      <TextView
        android:id="@+id/main_speed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_speed" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_hdop_title" />
      <TextView
        android:id="@+id/main_hdop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_gravity="center"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_hdop" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_num_satellites_title" />
      <TextView
        android:id="@+id/main_num_satellites"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_gravity="center"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_num_satellites" />
    </TableRow>
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_used_satellites_title" />
      <TextView
        android:id="@+id/main_used_satellites"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_status_height"
        android:textSize="@dimen/main_status_font_size"
        android:layout_gravity="center"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:text="@string/main_used_satellites" />
    </TableRow>
  </TableLayout>
</LinearLayout>
